src/antlr/html/HtmlParser.java
// Generated from C:/Users/k/Desktop/compiler/grammars/HtmlParser.g4 by ANTLR 4.13.2
package antlr.html;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HtmlParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            JINJA_EXPR_START=1, JINJA_STMT_START=2, JINJA_COMMENT_START=3, HTML_COMMENT=4,
            HTML_CONDITIONAL_COMMENT=5, XML_DECLARATION=6, CDATA=7, DTD=8, SCRIPTLET=9,
            SEA_WS=10, STYLE_OPEN=11, TAG_OPEN=12, HTML_TEXT=13, TAG_CLOSE=14, TAG_SLASH_CLOSE=15,
            TAG_SLASH=16, TAG_EQUALS=17, TAG_NAME=18, TAG_WHITESPACE=19, ATTVALUE_VALUE=20,
            STYLE_CLOSE=21, CSS_LBRACE=22, CSS_RBRACE=23, CSS_LPAREN=24, CSS_RPAREN=25,
            CSS_COLON=26, CSS_SEMI=27, CSS_COMMA=28, CSS_DOT=29, CSS_GT=30, CSS_HASH=31,
            CSS_HEX_COLOR=32, CSS_NUMBER=33, CSS_UNIT=34, CSS_STRING=35, CSS_ID=36,
            CSS_Space=37, CSS_Comment=38, CSS_TILDE=39, JINJA_EXPR_END=40, JINJA_STMT_END=41,
            J_EXTENDS=42, J_BLOCK=43, J_ENDBLOCK=44, J_FOR=45, J_ENDFOR=46, J_IF=47,
            J_SET=48, J_ENDIF=49, J_IN=50, J_LENGTH=51, J_OR=52, J_AND=53, J_NOT=54,
            J_IS=55, J_FILTER=56, J_TRUE=57, J_FALSE=58, J_NONE=59, J_LPAREN=60, J_RPAREN=61,
            J_LBRACK=62, J_RBRACK=63, J_COMMA=64, J_DOT=65, J_PIPE=66, J_EQ=67, J_NEQ=68,
            J_GT=69, J_LT=70, J_ASSIGN=71, J_PLUS=72, J_MINUS=73, J_STAR=74, J_SLASH=75,
            J_NUMBER=76, J_STRING=77, J_NAME=78, J_WS=79;
    public static final int
            RULE_html_content = 0, RULE_html_content_item = 1, RULE_htmlElement = 2,
            RULE_tag_content = 3, RULE_style_sheet = 4, RULE_ruleSet = 5, RULE_selector_decl = 6,
            RULE_css_selector_list = 7, RULE_css_selector = 8, RULE_declarationList = 9,
            RULE_declaration = 10, RULE_css_function_args = 11, RULE_css_function_call = 12,
            RULE_cssterm = 13, RULE_jinjaStatementBlock = 14, RULE_jinjaExpressionBlock = 15,
            RULE_jStatement = 16, RULE_j_extends_stmt = 17, RULE_j_block_stmt = 18,
            RULE_j_for_stmt = 19, RULE_j_if_stmt = 20, RULE_j_set_stmt = 21, RULE_j_list_literal = 22,
            RULE_j_expression = 23, RULE_j_arithmetic_expr = 24, RULE_j_call_expr = 25,
            RULE_j_var_access = 26, RULE_j_argument_list = 27, RULE_j_argument = 28,
            RULE_j_atom = 29;
    private static String[] makeRuleNames() {
        return new String[] {
                "html_content", "html_content_item", "htmlElement", "tag_content", "style_sheet",
                "ruleSet", "selector_decl", "css_selector_list", "css_selector", "declarationList",
                "declaration", "css_function_args", "css_function_call", "cssterm", "jinjaStatementBlock",
                "jinjaExpressionBlock", "jStatement", "j_extends_stmt", "j_block_stmt",
                "j_for_stmt", "j_if_stmt", "j_set_stmt", "j_list_literal", "j_expression",
                "j_arithmetic_expr", "j_call_expr", "j_var_access", "j_argument_list",
                "j_argument", "j_atom"
        };
    }
    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
                null, "'{{'", "'{%'", "'{#'", null, null, null, null, null, null, null,
                null, null, null, null, "'/>'", null, null, null, null, null, null, "'{'",
                "'}'", null, null, "':'", "';'", null, null, null, "'#'", null, null,
                null, null, null, null, null, "'~'", "'}}'", "'%}'", "'extends'", "'block'",
                "'endblock'", "'for'", "'endfor'", "'if'", "'set'", "'endif'", "'in'",
                "'length'", "'or'", "'and'", "'not'", "'is'", "'filter'", "'true'", "'false'",
                "'none'", null, null, "'['", "']'", null, null, "'|'", "'=='", "'!='",
                null, null, null, "'+'", "'-'", "'*'"
        };
    }
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static String[] makeSymbolicNames() {
        return new String[] {
                null, "JINJA_EXPR_START", "JINJA_STMT_START", "JINJA_COMMENT_START",
                "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", "XML_DECLARATION", "CDATA",
                "DTD", "SCRIPTLET", "SEA_WS", "STYLE_OPEN", "TAG_OPEN", "HTML_TEXT",
                "TAG_CLOSE", "TAG_SLASH_CLOSE", "TAG_SLASH", "TAG_EQUALS", "TAG_NAME",
                "TAG_WHITESPACE", "ATTVALUE_VALUE", "STYLE_CLOSE", "CSS_LBRACE", "CSS_RBRACE",
                "CSS_LPAREN", "CSS_RPAREN", "CSS_COLON", "CSS_SEMI", "CSS_COMMA", "CSS_DOT",
                "CSS_GT", "CSS_HASH", "CSS_HEX_COLOR", "CSS_NUMBER", "CSS_UNIT", "CSS_STRING",
                "CSS_ID", "CSS_Space", "CSS_Comment", "CSS_TILDE", "JINJA_EXPR_END",
                "JINJA_STMT_END", "J_EXTENDS", "J_BLOCK", "J_ENDBLOCK", "J_FOR", "J_ENDFOR",
                "J_IF", "J_SET", "J_ENDIF", "J_IN", "J_LENGTH", "J_OR", "J_AND", "J_NOT",
                "J_IS", "J_FILTER", "J_TRUE", "J_FALSE", "J_NONE", "J_LPAREN", "J_RPAREN",
                "J_LBRACK", "J_RBRACK", "J_COMMA", "J_DOT", "J_PIPE", "J_EQ", "J_NEQ",
                "J_GT", "J_LT", "J_ASSIGN", "J_PLUS", "J_MINUS", "J_STAR", "J_SLASH",
                "J_NUMBER", "J_STRING", "J_NAME", "J_WS"
        };
    }
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "HtmlParser.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public HtmlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Html_contentContext extends ParserRuleContext {
        public Html_contentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_html_content; }

        public Html_contentContext() { }
        public void copyFrom(Html_contentContext ctx) {
            super.copyFrom(ctx);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class HtmlContentContext extends Html_contentContext {
        public List<Html_content_itemContext> html_content_item() {
            return getRuleContexts(Html_content_itemContext.class);
        }
        public Html_content_itemContext html_content_item(int i) {
            return getRuleContext(Html_content_itemContext.class,i);
        }
        public HtmlContentContext(Html_contentContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterHtmlContent(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitHtmlContent(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlContent(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Html_contentContext html_content() throws RecognitionException {
        Html_contentContext _localctx = new Html_contentContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_html_content);
        try {
            int _alt;
            _localctx = new HtmlContentContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(63);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input,0,_ctx);
                while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                    if ( _alt==1 ) {
                        {
                            {
                                setState(60);
                                html_content_item();
                            }
                        }
                    }
                    setState(65);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,0,_ctx);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Html_content_itemContext extends ParserRuleContext {
        public Html_content_itemContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_html_content_item; }

        public Html_content_itemContext() { }
        public void copyFrom(Html_content_itemContext ctx) {
            super.copyFrom(ctx);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class JinjaStmtItemContext extends Html_content_itemContext {
        public JinjaStatementBlockContext jinjaStatementBlock() {
            return getRuleContext(JinjaStatementBlockContext.class,0);
        }
        public JinjaStmtItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterJinjaStmtItem(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitJinjaStmtItem(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitJinjaStmtItem(this);
            else return visitor.visitChildren(this);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class JinjaExprItemContext extends Html_content_itemContext {
        public JinjaExpressionBlockContext jinjaExpressionBlock() {
            return getRuleContext(JinjaExpressionBlockContext.class,0);
        }
        public JinjaExprItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterJinjaExprItem(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitJinjaExprItem(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitJinjaExprItem(this);
            else return visitor.visitChildren(this);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class HtmlElementItemContext extends Html_content_itemContext {
        public HtmlElementContext htmlElement() {
            return getRuleContext(HtmlElementContext.class,0);
        }
        public HtmlElementItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterHtmlElementItem(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitHtmlElementItem(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlElementItem(this);
            else return visitor.visitChildren(this);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class HtmlTextItemContext extends Html_content_itemContext {
        public TerminalNode HTML_TEXT() { return getToken(HtmlParser.HTML_TEXT, 0); }
        public HtmlTextItemContext(Html_content_itemContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterHtmlTextItem(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitHtmlTextItem(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlTextItem(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Html_content_itemContext html_content_item() throws RecognitionException {
        Html_content_itemContext _localctx = new Html_content_itemContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_html_content_item);
        try {
            setState(70);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case STYLE_OPEN:
                case TAG_OPEN:
                    _localctx = new HtmlElementItemContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(66);
                    htmlElement();
                }
                break;
                case HTML_TEXT:
                    _localctx = new HtmlTextItemContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(67);
                    match(HTML_TEXT);
                }
                break;
                case JINJA_STMT_START:
                    _localctx = new JinjaStmtItemContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(68);
                    jinjaStatementBlock();
                }
                break;
                case JINJA_EXPR_START:
                    _localctx = new JinjaExprItemContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(69);
                    jinjaExpressionBlock();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class HtmlElementContext extends ParserRuleContext {
        public HtmlElementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_htmlElement; }

        public HtmlElementContext() { }
        public void copyFrom(HtmlElementContext ctx) {
            super.copyFrom(ctx);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class TagElementContext extends HtmlElementContext {
        public TerminalNode TAG_OPEN() { return getToken(HtmlParser.TAG_OPEN, 0); }
        public TerminalNode TAG_SLASH_CLOSE() { return getToken(HtmlParser.TAG_SLASH_CLOSE, 0); }
        public TerminalNode TAG_CLOSE() { return getToken(HtmlParser.TAG_CLOSE, 0); }
        public List<Tag_contentContext> tag_content() {
            return getRuleContexts(Tag_contentContext.class);
        }
        public Tag_contentContext tag_content(int i) {
            return getRuleContext(Tag_contentContext.class,i);
        }
        public TagElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterTagElement(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitTagElement(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitTagElement(this);
            else return visitor.visitChildren(this);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class StyleElementContext extends HtmlElementContext {
        public TerminalNode STYLE_OPEN() { return getToken(HtmlParser.STYLE_OPEN, 0); }
        public Style_sheetContext style_sheet() {
            return getRuleContext(Style_sheetContext.class,0);
        }
        public TerminalNode STYLE_CLOSE() { return getToken(HtmlParser.STYLE_CLOSE, 0); }
        public StyleElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterStyleElement(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitStyleElement(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitStyleElement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final HtmlElementContext htmlElement() throws RecognitionException {
        HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_htmlElement);
        int _la;
        try {
            int _alt;
            setState(84);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case TAG_OPEN:
                    _localctx = new TagElementContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(72);
                    match(TAG_OPEN);
                    setState(76);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,2,_ctx);
                    while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
                        if ( _alt==1+1 ) {
                            {
                                {
                                    setState(73);
                                    tag_content();
                                }
                            }
                        }
                        setState(78);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input,2,_ctx);
                    }
                    setState(79);
                    _la = _input.LA(1);
                    if ( !(_la==TAG_CLOSE || _la==TAG_SLASH_CLOSE) ) {
                        _errHandler.recoverInline(this);
                    }
                    else {
                        if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
                        _errHandler.reportMatch(this);
                        consume();
                    }
                }
                break;
                case STYLE_OPEN:
                    _localctx = new StyleElementContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(80);
                    match(STYLE_OPEN);
                    setState(81);
                    style_sheet();
                    setState(82);
                    match(STYLE_CLOSE);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Tag_contentContext extends ParserRuleContext {
        public Tag_contentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_tag_content; }

        public Tag_contentContext() { }
        public void copyFrom(Tag_contentContext ctx) {
            super.copyFrom(ctx);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class ClosingMarkerContext extends Tag_contentContext {
        public TerminalNode TAG_SLASH() { return getToken(HtmlParser.TAG_SLASH, 0); }
        public ClosingMarkerContext(Tag_contentContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterClosingMarker(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitClosingMarker(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitClosingMarker(this);
            else return visitor.visitChildren(this);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class HtmlAttributeContext extends Tag_contentContext {
        public TerminalNode TAG_NAME() { return getToken(HtmlParser.TAG_NAME, 0); }
        public TerminalNode TAG_EQUALS() { return getToken(HtmlParser.TAG_EQUALS, 0); }
        public TerminalNode ATTVALUE_VALUE() { return getToken(HtmlParser.ATTVALUE_VALUE, 0); }
        public HtmlAttributeContext(Tag_contentContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterHtmlAttribute(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitHtmlAttribute(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitHtmlAttribute(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Tag_contentContext tag_content() throws RecognitionException {
        Tag_contentContext _localctx = new Tag_contentContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_tag_content);
        int _la;
        try {
            setState(92);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case TAG_NAME:
                    _localctx = new HtmlAttributeContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(86);
                    match(TAG_NAME);
                    setState(89);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la==TAG_EQUALS) {
                        {
                            setState(87);
                            match(TAG_EQUALS);
                            setState(88);
                            match(ATTVALUE_VALUE);
                        }
                    }

                }
                break;
                case TAG_SLASH:
                    _localctx = new ClosingMarkerContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(91);
                    match(TAG_SLASH);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Style_sheetContext extends ParserRuleContext {
        public Style_sheetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_style_sheet; }

        public Style_sheetContext() { }
        public void copyFrom(Style_sheetContext ctx) {
            super.copyFrom(ctx);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class StyleSheetContext extends Style_sheetContext {
        public List<RuleSetContext> ruleSet() {
            return getRuleContexts(RuleSetContext.class);
        }
        public RuleSetContext ruleSet(int i) {
            return getRuleContext(RuleSetContext.class,i);
        }
        public StyleSheetContext(Style_sheetContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterStyleSheet(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitStyleSheet(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitStyleSheet(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Style_sheetContext style_sheet() throws RecognitionException {
        Style_sheetContext _localctx = new Style_sheetContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_style_sheet);
        int _la;
        try {
            _localctx = new StyleSheetContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==CSS_DOT || _la==CSS_ID) {
                    {
                        {
                            setState(94);
                            ruleSet();
                        }
                    }
                    setState(99);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RuleSetContext extends ParserRuleContext {
        public RuleSetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_ruleSet; }

        public RuleSetContext() { }
        public void copyFrom(RuleSetContext ctx) {
            super.copyFrom(ctx);
        }
    }
    @SuppressWarnings("CheckReturnValue")
    public static class CssRuleContext extends RuleSetContext {
        public Selector_declContext selector_decl() {
            return getRuleContext(Selector_declContext.class,0);
        }
        public TerminalNode CSS_LBRACE() { return getToken(HtmlParser.CSS_LBRACE, 0); }
        public DeclarationListContext declarationList() {
            return getRuleContext(DeclarationListContext.class,0);
        }
        public TerminalNode CSS_RBRACE() { return getToken(HtmlParser.CSS_RBRACE, 0); }
        public CssRuleContext(RuleSetContext ctx) { copyFrom(ctx); }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).enterCssRule(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof HtmlParserListener ) ((HtmlParserListener)listener).exitCssRule(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof HtmlParserVisitor ) return ((HtmlParserVisitor<? extends T>)visitor).visitCssRule(this);
            else return visitor.visitChildren(this);
        }
    }
